--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://nikhilrajrajput/passwordGenerator",
   "name": "password-generator",
   "private": true,
   "version": "0.0.0",
